force-app/main/default/objects/Parent_Item__c/Parent_Item__c.object-meta.xml
<CustomObject>
    <label>Parent Item</label>
    <nameField>
        <displayFormat>PAR-{000000}</displayFormat>
        <label>Parent Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parent Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>