force-app/main/default/objects/Parent_Item__c/fields/Available_For_Usage__c.field-meta.xml
<CustomField>
    <fullName>Available_For_Usage__c</fullName>
    <label>Available For Usage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>