force-app/main/default/objects/Parent_Item__c/fields/Contract_CLIN__c.field-meta.xml
<CustomField>
    <fullName>Contract_CLIN__c</fullName>
    <label>Contract CLIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>