force-app/main/default/objects/Parent_Item__c/fields/CSO_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>CSO_Change_Type__c</fullName>
    <label>CSO Change Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>