force-app/main/default/objects/Parent_Item__c/fields/CSP__c.field-meta.xml
<CustomField>
    <fullName>CSP__c</fullName>
    <label>CSP</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>aws</fullName>
                <default>true</default>
                <label>AWS</label>
            </value>
            <value>
                <fullName>azure</fullName>
                <label>Azure</label>
            </value>
            <value>
                <fullName>gcp</fullName>
                <label>GCP</label>
            </value>
            <value>
                <fullName>oracle</fullName>
                <label>Oracle</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>