force-app/main/default/objects/Parent_Item__c/fields/CSP_Name__c.field-meta.xml
<CustomField>
    <fullName>CSP_Name__c</fullName>
    <label>CSP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>