force-app/main/default/objects/Parent_Item__c/fields/IL2_Authorizing_Agency__c.field-meta.xml
<CustomField>
    <fullName>IL2_Authorizing_Agency__c</fullName>
    <label>IL2 Authorizing Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>