force-app/main/default/objects/Parent_Item__c/fields/IL2_Cso_Name_On_Pa__c.field-meta.xml
<CustomField>
    <fullName>IL2_Cso_Name_On_Pa__c</fullName>
    <label>IL2 Cso Name On Pa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>