force-app/main/default/objects/Parent_Item__c/fields/IL2_Pa_Doc_Title__c.field-meta.xml
<CustomField>
    <fullName>IL2_Pa_Doc_Title__c</fullName>
    <label>IL2 Pa Doc Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>