force-app/main/default/objects/Parent_Item__c/fields/IL4_Authorization_Timeline__c.field-meta.xml
<CustomField>
    <fullName>IL4_Authorization_Timeline__c</fullName>
    <label>IL4 Authorization Timeline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>