force-app/main/default/objects/Parent_Item__c/fields/IL4_Authorizing_Agency__c.field-meta.xml
<CustomField>
    <fullName>IL4_Authorizing_Agency__c</fullName>
    <label>IL4 Authorizing Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>