force-app/main/default/objects/Parent_Item__c/fields/IL4_Cso_Name_On_Pa__c.field-meta.xml
<CustomField>
    <fullName>IL4_Cso_Name_On_Pa__c</fullName>
    <label>IL4 Cso Name On Pa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>