force-app/main/default/objects/Parent_Item__c/fields/IL4_Pa_Doc_Title__c.field-meta.xml
<CustomField>
    <fullName>IL4_Pa_Doc_Title__c</fullName>
    <label>IL4 Pa Doc Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>