force-app/main/default/objects/Parent_Item__c/fields/IL5_Authorization_Timeline__c.field-meta.xml
<CustomField>
    <fullName>IL5_Authorization_Timeline__c</fullName>
    <label>IL5 Authorization Timeline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>