force-app/main/default/objects/Parent_Item__c/fields/IL5_Authorizing_Agency__c.field-meta.xml
<CustomField>
    <fullName>IL5_Authorizing_Agency__c</fullName>
    <label>IL5 Authorizing Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>