force-app/main/default/objects/Parent_Item__c/fields/Method_Of_Add__c.field-meta.xml
<CustomField>
    <fullName>Method_Of_Add__c</fullName>
    <label>Method Of Add</label>
    <length>255</length>
    <type>Text</type>
</CustomField>