force-app/main/default/objects/Parent_Item__c/fields/Offering_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Offering_Indicator__c</fullName>
    <label>Offering Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>