force-app/main/default/objects/Parent_Item__c/fields/Section_508_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Section_508_Compliance__c</fullName>
    <label>Section 508 Compliance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>