force-app/main/default/objects/Parent_Item__c/fields/TS_Authorization_Timeline__c.field-meta.xml
<CustomField>
    <fullName>TS_Authorization_Timeline__c</fullName>
    <label>TS Authorization Timeline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>