force-app/main/default/objects/Parent_Item__c/fields/TS_Authorizing_Agency__c.field-meta.xml
<CustomField>
    <fullName>TS_Authorizing_Agency__c</fullName>
    <label>TS Authorizing Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>