force-app/main/default/objects/Parent_Item__c/fields/TS_Cso_Name_On_Pa__c.field-meta.xml
<CustomField>
    <fullName>TS_Cso_Name_On_Pa__c</fullName>
    <label>TS Cso Name On Pa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>