force-app/main/default/objects/Parent_Item__c/fields/TS_Pa_Doc_Title__c.field-meta.xml
<CustomField>
    <fullName>TS_Pa_Doc_Title__c</fullName>
    <label>TS Pa Doc Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>